# mambax-backend

./: .gitignore  .pre-commit-config.yaml  ADMIN_AUDIT_TODOS.md  ANALYSIS_REPORT.txt  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_MANUAL.md  DESIGN_AND_UX_PLAN.md  DESKTOP_MOBILE_VIEW.md  HATE_AUDIT.md  IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS.md  README.md  SECURITY_CONTACTS.md  TELEGRAM_BOT_SETUP.md  TESTING_REPORT.md  VERCEL_DEPLOY.md  backend_log.txt  check_api.py  check_critical.py  check_db.py  check_schema.py  check_tables.py  deploy-all.sh  docker-compose.dev.yml  docker-compose.yml  frontend_logs.txt  libraries.md  log.txt  migrate_prefs.py  payment_flow.md  push_error.txt  railway.toml  render.yaml  reset_profile.py  run_bot.py  run_server.py  start_dev.bat  start_server.bat  start_server.py  (+7 more)
backend/: .dockerignore  .env.complete  .env.example  .gitignore  Dockerfile  README.md  api.py  auth.py  bot.py  cert.pem.bak  check_admin.py  check_user.py  check_user_sync.py  clear_all_users.py  create_admin.py  create_tables.py  crud.py  database.py  debug_otp_test.py  get_local_ip.py  index.py  key.pem.bak  main.py  mambax.db  metrics.py  migrate_missing_columns.py  models.py  models_old.py  mypy.ini  populate_real_users.py  promote_admin.py  pyproject.toml  requirements.txt  schemas.py  schemas_old.py  security.py  seed.py  seed_gifts.py  seed_users.py  setup.cfg  (+2 more)
backend/alembic/: env.py
backend/api/: admin.py  advanced.py  auth.py  bot_webhook.py  chat.py  client_logs.py  debug.py  discovery.py  health.py  index.py  interaction.py  marketing.py  monetization.py  (+12 more)
(+782 files in other folders)
