[project]
name = "mambax-backend"
version = "1.0.0"
description = "MambaX Dating Platform Backend API"
requires-python = ">=3.11"

[project.scripts]
app = "index:app"

[tool.vercel]
# Tell Vercel to use index.py as entry point
entrypoint = "index.py"

[tool.vercel.scripts]
# Build command - set PYTHONPATH so imports work
build = "echo 'Build complete'"
